--- a/sdk/pyproject.toml
+++ b/sdk/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["hatchling"]
+requires = ["hatchling", "hatch-vcs"]
 build-backend = "hatchling.build"
 
 [project]
 name = "mlflare"
-version = "0.1.0"
+dynamic = ["version"]
 description = "MLflare Python SDK — zero-dependency ML experiment tracking"
 requires-python = ">= 3.9"
 license = "MIT"
@@ -12,6 +12,13 @@ dependencies = []
 
 [project.optional-dependencies]
 dev = ["pytest>=7.0"]
+
+[tool.hatch.version]
+source = "vcs"
+raw-options = { root = "..", tag_regex = "^sdk-v(?P<version>.*)$" }
+
+[tool.hatch.build.hooks.vcs]
+version-file = "mlflare/_version.py"
 
 [tool.hatch.build.targets.wheel]
 packages = ["mlflare"]
