--- a/backend/wrangler.jsonc
+++ b/backend/wrangler.jsonc
@@ -1,13 +1,15 @@
 {
   "name": "mlflare",
   "main": "src/index.ts",
-  "compatibility_date": "2025-01-15",
+  "compatibility_date": "2025-04-01",
   "compatibility_flags": ["nodejs_compat"],
 
   // Static assets: serve PWA from frontend build output
   "assets": {
     "directory": "../frontend/dist",
-    "run_worker_first": true
+    "binding": "ASSETS",
+    "not_found_handling": "single-page-application",
+    "run_worker_first": ["/auth/*", "/agent/*", "/api/*", "/sdk/*", "/health"]
   },
 
   // D1 database
